# stbi-sharp

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.txt  README.md  stbi-sharp.cs  stbi-sharp.csproj
.github/workflows/: main.yml  publish.yml
libstbi/: CMakeLists.txt
libstbi/src/: stbi.cpp
